--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,6 +5,10 @@
   <title>Landing Page</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="assets/css/variables.css" rel="stylesheet" />
+  <link href="assets/css/elements.css" rel="stylesheet" />
+  <link href="assets/css/classes.css" rel="stylesheet" />
+  <link href="assets/css/menu.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,44 +17,27 @@
     rel="stylesheet" />
 </head>
 
-<body>
-  <section class="main-bg section">
-    <div class="main-content">
-      <h1>Lucas</h1>
-      <p>
-        Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit
-        enim labore culpa sint ad nisi Lorem pariatur mollit ex esse
-        exercitation amet. Nisi anim cupidatat excepteur officia.
-        Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate
-        voluptate dolor minim nulla est proident. Nostrud officia pariatur ut
-        officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
-        commodo officia dolor Lorem duis laboris cupidatat officia voluptate.
-        Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis
-        officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis
-        sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea
-        consectetur et est culpa et culpa duis.
-      </p>
-    </div>
-  </section>
+<body class="main-bg">
+  <aside class="menu white-bg">
+    <section class="main-content menu-content">
+      <h1>
+        <a href="#">LOGO</a>
+      </h1>
 
-  <section class="white-bg section">
-    <div class="main-content">
-      <h1>Lucas</h1>
-      <p>
-        Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit
-        enim labore culpa sint ad nisi Lorem pariatur mollit ex esse
-        exercitation amet. Nisi anim cupidatat excepteur officia.
-        Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate
-        voluptate dolor minim nulla est proident. Nostrud officia pariatur ut
-        officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit
-        commodo officia dolor Lorem duis laboris cupidatat officia voluptate.
-        Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis
-        officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis
-        sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea
-        consectetur et est culpa et culpa duis.
-      </p>
-    </div>
-  </section>
+      <nav>
+        <ul>
+          <li><a href="#">intro</a></li>
+          <li><a href="#">top 3</a></li>
+          <li><a href="#">gallery</a></li>
+          <li><a href="#">work</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+    </section>
+  </aside>
+
+  <section class="section white-bg"></section>
+  <section class="section"></section>
 </body>
 
 </html>
