--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,43 +1,64 @@
 <!doctype html>
 <html lang="pt-BR">
+  <head>
+    <title>Landing Page</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="assets/css/variables.css" rel="stylesheet" />
+    <link href="assets/css/elements.css" rel="stylesheet" />
+    <link href="assets/css/classes.css" rel="stylesheet" />
+    <link href="assets/css/menu.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <title>Landing Page</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="assets/css/variables.css" rel="stylesheet" />
-  <link href="assets/css/elements.css" rel="stylesheet" />
-  <link href="assets/css/classes.css" rel="stylesheet" />
-  <link href="assets/css/menu.css" rel="stylesheet" />
-  <link href="assets/css/style.css" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet" />
-</head>
+  <body class="main-bg">
+    <aside class="menu white-bg">
+      <div class="main-content menu-content">
+        <h1>
+          <a href="#">LOGO</a>
+        </h1>
 
-<body class="main-bg">
-  <aside class="menu white-bg">
-    <section class="main-content menu-content">
-      <h1>
-        <a href="#">LOGO</a>
-      </h1>
+        <nav>
+          <ul>
+            <li><a href="#">intro</a></li>
+            <li><a href="#">top 3</a></li>
+            <li><a href="#">gallery</a></li>
+            <li><a href="#">work</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
 
-      <nav>
-        <ul>
-          <li><a href="#">intro</a></li>
-          <li><a href="#">top 3</a></li>
-          <li><a href="#">gallery</a></li>
-          <li><a href="#">work</a></li>
-          <li><a href="#">contact</a></li>
-        </ul>
-      </nav>
+    <div class="menu-spacing"></div>
+
+    <section class="intro main-bg section">
+      <div class="main-content intro-content">
+        <div class="intro-text-content">
+          <h2>January brings us Firefox 85</h2>
+          <p>
+            To wrap up January, we are proud to bring you the release of Firefox
+            85. In this version we are bringing you support for the
+            :focus-visible pseudo-class in CSS and associated devtools, and the
+            complete removal of Flash support from Firefox.
+          </p>
+        </div>
+
+        <div class="intro-img">
+          <img
+            src="assets/img/javascript.svg"
+            alt="logo of HTML, CSS e JS"
+          />
+        </div>
+      </div>
     </section>
-  </aside>
 
-  <section class="section white-bg"></section>
-  <section class="section"></section>
-</body>
-
+    <section class="white-bg section"></section>
+  </body>
 </html>
