--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -344,8 +344,15 @@
 
     <footer id="footer" class="white-bg footer">
       <p>
-        <a rel="nofollow" target="_blank" href="https://github.com/LucasMartinsVieira">Made by Lucas Martins Vieira 🥷🏻</a>
+        <a
+          rel="nofollow"
+          target="_blank"
+          href="https://github.com/LucasMartinsVieira"
+          >Made by Lucas Martins Vieira 🥷🏻</a
+        >
       </p>
     </footer>
+
+    <a class="back-to-top" href="#">➤</a>
   </body>
 </html>
